--- a/styles/main.css
+++ b/styles/main.css
@@ -93,6 +93,7 @@ body {
     width: 100%;
     margin: 0 auto;
     padding: 0 30px;
+    
 }
 
 .header {
@@ -210,6 +211,7 @@ body {
 
 }
 
+
 .section-news__title {
     color: white;
     text-align: center;
@@ -218,9 +220,12 @@ body {
 
     font-weight: 500;
 
-    position: relative;
-
     padding: 30px 0;
+
+    position: relative;
+    z-index: 1;
+
+    
 
 }
 
@@ -230,9 +235,10 @@ body {
 
 .section-news__title::after {
     content: '';
-    display: inline-block;
-    z-index: 1;
+
     position: absolute;
+    z-index: -1;
+
     top: 0;
     left: -150px;
     width: 1140px;
@@ -240,6 +246,17 @@ body {
     
     background: linear-gradient(90deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.50) 38.72%, rgba(0, 0, 0, 0.50) 61.63%, rgba(0, 0, 0, 0.00) 100%);
 }
+
+/* .line {
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.50) 38.72%, rgba(0, 0, 0, 0.50) 61.63%, rgba(0, 0, 0, 0.00) 100%);
+    width: 1140px;
+    height: 170px;
+    position: absolute;
+    z-index: 0;
+
+    top: -15px;
+    left: -150px;
+} */
 
 .section-news__button {
     text-transform: uppercase;
@@ -367,6 +384,40 @@ body {
     line-height: 30.6px;
 }
 
+.list-item__info-button {
+    padding-left: 38px;
+    position: relative;
+
+    z-index: 5;
+}
+
+.list-item__info-button::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    background-color: #00CABF;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+.list-item__info-button::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 28px;
+    height: 28px;
+    background-image: url(../images/cars_icon/solar_pen-linear.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 .list-item__info-description {
     color: #000;
     font-size: 20px;
@@ -378,6 +429,7 @@ body {
 
 .list-item__info-images {
     position: relative;
+    z-index: 1;
 }
 
 .list-item__info::after {
@@ -392,7 +444,218 @@ body {
     width: 100%;
     height: 100%;
 
-    opacity: 0.3;
+
+    z-index: 0;
+}
+
+.tag {
+    position: relative;
+}
+
+.tag::before {
+    content: '';
+
+    position: absolute;
+    top: -5px;
+    left: 0;
+
+    width: 28px;
+    height: 28px;
+
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+
+    background-color: #000;
+}
+
+.tag::after {
+    content: '';
+
+    position: absolute;
+    top: -5px;
+    left: 0;
+
+    width: 28px;
+    height: 28px;
+    
+    background-image: url(../images/cars_icon/ion_pricetags-outline.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.tag:hover.tag::before{
+    background-color: #00CABF;
+}
+
+.protection {
+    position: relative;
+}
+
+.protection::before {
+    content: '';
+
+    position: absolute;
+    top: -10px;
+    left: 0;
+
+    width: 28px;
+    height: 28px;
+
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+
+    background-color: #000;
+}
+
+.protection::after {
+    content: '';
+
+    position: absolute;
+    top: -10px;
+    left: 0;
+
+    width: 28px;
+    height: 28px;
+    
+    background-image: url(../images/cars_icon/octicon_shield-check-24.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.protection:hover.protection::before{
+    background-color: #00CABF;
+}
+
+.wheel {
+    position: relative;
+}
+
+.wheel::before {
+    content: '';
+
+    position: absolute;
+    top: -6px;
+    left: 0;
+
+    width: 28px;
+    height: 28px;
+
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+
+    background-color: #000;
+}
+
+.wheel::after {
+    content: '';
+
+    position: absolute;
+    top: -6px;
+    left: 0;
+
+    width: 28px;
+    height: 28px;
+    
+    background-image: url(../images/cars_icon/car_ico8.svg.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.wheel:hover.wheel::before{
+    background-color: #00CABF;
+}
+
+.wallet {
+    position: relative;
+}
+
+.wallet::before {
+    content: '';
+
+    position: absolute;
+    top: -6px;
+    left: 0;
+
+    width: 28px;
+    height: 28px;
+
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+
+    background-color: #000;
+}
+
+.wallet::after {
+    content: '';
+
+    position: absolute;
+    top: -6px;
+    left: 0;
+
+    width: 28px;
+    height: 28px;
+    
+    background-image: url(../images/cars_icon/ph_wallet-light.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.wallet:hover.wallet::before{
+    background-color: #00CABF;
+}
+
+.gift {
+    position: relative;
+}
+
+.gift::before {
+    content: '';
+
+    position: absolute;
+    top: -6px;
+    left: 0;
+
+    width: 28px;
+    height: 28px;
+
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+
+    background-color: #000;
+}
+
+.gift::after {
+    content: '';
+
+    position: absolute;
+    top: -6px;
+    left: 0;
+
+    width: 28px;
+    height: 28px;
+    
+    background-image: url(../images/cars_icon/ph_gift-light.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.gift:hover.gift::before{
+    background-color: #00CABF;
 }
 
 
@@ -438,15 +701,19 @@ body {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: 13px;
+    gap: 20px;
 
     font-size: 12px;
+
+    align-items: center;
 
 }
 
 .list-item__conditions-item {
     max-width: 230px;
     width: 100%;
+
+    padding-left: 38px;
 }
 
 
